# -CNN_Avance

./: CMakeLists.txt  CNN.h  Capa_Convolucional.cpp  Constructor.cpp  Convolucion.cpp  Datos_BDD.cpp  Derivadas_Funcion_Activacion.cpp  Descenso_Gradiante.cpp  Entrenamiento.cpp  Fully_Connected.cpp  Funcion_Activacion.cpp  Matrices_Filtros.cpp  Propagacion.cpp  README.md  Resultados.cpp  main.cpp
